<?xml version="1.0" encoding="utf-8"?>

<!DOCTYPE resources [
    <!ENTITY appName "Song Quiz">
    <!ENTITY appId "">
    <!ENTITY appVersion "v0.6">
    <!ENTITY appDate "09/06/2021">
    <!ENTITY appCreator "Arpad Fodor">
    <!ENTITY clientId "51aee5a292494583852e135803681e05">
    <!ENTITY clientSec "3b379ad7236341589e890fe61d834644">
    <!ENTITY adMobAppId "ca-app-pub-3940256099942544~3347511713">
    <!ENTITY adMobQuizAdId "ca-app-pub-3940256099942544/6300978111">
    ]>
    <!--test adMobAppId "ca-app-pub-3940256099942544~3347511713"-->
    <!--test adMobBannerId "ca-app-pub-3940256099942544/6300978111"-->

<resources>

    <string name="app_name">&appName;</string>
    <string name="app_id">&appId;</string>
    <string name="app_version">&appVersion;</string>
    <string name="app_date">&appDate;</string>
    <string name="app_creator">Created by &appCreator;</string>
    <string name="developer_page">https://github.com/arpadfodor</string>
    <string name="maintenance_contact">arpadfodor01@gmail.com</string>
    <string name="maintenance_message_title">[%1$s][bug report]</string>
    <string name="store_page">http://play.google.com/store/apps/details?id=%1$s</string>
    <string name="client_info">&clientId;:&clientSec;</string>

    <string name="app_ads_id">&adMobAppId;</string>
    <string name="quiz_ad_id">&adMobQuizAdId;</string>

    <string name="nav_header_title">&appName;</string>
    <string name="nav_header_subtitle">Do you know what you hear?</string>

    <string name="menu_playlists">Playlists</string>
    <string name="menu_playlist_add">Add playlist</string>
    <string name="menu_about">About</string>

    <string name="about_text">
        Created by &appCreator;\n\n
        &appDate;\n\n
        &appVersion;\n\n
        This app uses Spotify playlists to play with. We recommend that you have an English text-to-speech engine, as the information comes in English. Internet connection is needed while playing.\n\n
    </string>

    <string name="legal_title">Legal information</string>
    <string name="legal_text">
        © &appDate; &appCreator;\n\n
        The software is provided "as is", without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose and non infringement. In no event shall the authors or copyright holders be liable for any claim, damages or other liability, whether in an action of contract, tort or otherwise, arising from, out of or in connection with the software or the use or other dealings in the software.
        \n\n
    </string>

    <string name="acknowledgments_title">Acknowledgments</string>
    <string name="acknowledgments_text">
         Images by naobim, Gordon Johnson and OpenClipart-Vectors from Pixabay.\n\n
    </string>

    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="next_button">NEXT</string>
    <string name="previous_button">PREV</string>

    <string name="exit_quiz">Leaving this quiz</string>
    <string name="exit_quiz_dialog">Are you sure you want to exit this quiz?</string>

    <string name="loading_playlist">Loading playlist…</string>
    <string name="ready_to_start">Playlist is ready! Press the speaker button to start.</string>
    <string name="error_playlist_load">Cannot load playlist</string>
    <string name="error_playlist_load_description">Cannot load playlist. Please check your internet connection and make sure that the playlist still exists on Spotify.</string>
    <string name="error_play_song">Cannot play current song</string>
    <string name="error_play_song_description">Cannot play current song. Please check your internet connection.</string>
    <string name="error_speak_to_user">Cannot speak to user</string>
    <string name="error_speak_to_user_description">Cannot speak to user. Please make sure your device supports text-to-speech.</string>

    <string name="owner_text">by %1$s</string>

    <string name="search_playlist">Search playlist</string>
    <string name="search_playlist_description">Type the name or the Spotify Id of the playlist.</string>
    <string name="empty_list">Click the add button to add playlists</string>
    <string name="empty_search_list">Click the search button to browse playlists</string>
    <string name="cannot_find_playlist">Not found or internet is not available</string>
    <string name="error_playlist_add">Cannot add this playlist</string>
    <string name="success_playlist_add">Successfully added</string>
    <string name="playlist_already_added">Already added</string>

    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_playlist_description">Are you sure you want to delete %1$s? This will not affect any Spotify playlists, and you can add them again later.</string>

    <string name="exit_title">Confirm exit</string>
    <string name="exit_dialog">Are you sure you want to exit?</string>

    <string name="request_permission_title">Request permission</string>
    <string name="request_permission_description">In order to work properly, the following permission is needed: %1$s.</string>
    <string name="request_settings_title">Enable permission in app settings</string>
    <string name="request_settings_description">In order to work properly, the following permission is needed: %1$s. Proceed to app settings to enable it.</string>

    <string name="AppImageDescription">App image</string>
    <string name="PlaylistImageDescription">Playlist image</string>
    <string name="appDialogImageDescription">app dialog image</string>
    <string name="fabAddPlaylistDescription">Add playlist</string>
    <string name="fabBackDescription">Back</string>
    <string name="fabSpeakDescription">Speak</string>
    <string name="nav_menu_open">Open main menu</string>
    <string name="nav_menu_close">Close main menu</string>
    <string name="nav_header_desc">Main menu header</string>

    <string name="unicode_start">❯</string>
    <string name="unicode_back">❮</string>
    <string name="unicode_cross">✖</string>
    <string name="unicode_add">＋</string>

    <string name="more_from_developer">More from the developer</string>
    <string name="review_app">Review app</string>
    <string name="report_bug">Report a problem</string>


</resources>