<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        style="@style/FancyText"
        android:gravity="center"
        android:id="@+id/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/ParagraphText"
        android:gravity="center"
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_title" />

    <TextView
        style="@style/SubtitleText"
        android:gravity="center"
        android:id="@+id/legal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/legal_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_text"/>

    <TextView
        style="@style/ParagraphText"
        android:gravity="center"
        android:id="@+id/legal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/legal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/legal_title" />

    <TextView
        style="@style/SubtitleText"
        android:gravity="center"
        android:id="@+id/acknowledgements_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acknowledgments_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/legal_text"/>

    <TextView
        style="@style/ParagraphText"
        android:gravity="center"
        android:id="@+id/acknowledgements_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acknowledgments_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acknowledgements_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/FAB"
        android:id="@+id/fabMoreFromDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon_more_apps"
        app:layout_constraintTop_toBottomOf="@+id/acknowledgements_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/fabMoreFromDeveloper"
        app:layout_constraintTop_toTopOf="@+id/fabMoreFromDeveloper"
        app:layout_constraintBottom_toBottomOf="@+id/fabMoreFromDeveloper"
        style="@style/ButtonLabel"
        android:text="@string/more_from_developer"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/FAB"
        android:id="@+id/fabReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon_review"
        app:layout_constraintTop_toBottomOf="@+id/fabMoreFromDeveloper"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/fabReview"
        app:layout_constraintTop_toTopOf="@+id/fabReview"
        app:layout_constraintBottom_toBottomOf="@+id/fabReview"
        style="@style/ButtonLabel"
        android:text="@string/review_app"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/FAB"
        android:id="@+id/fabReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon_bug"
        app:layout_constraintTop_toBottomOf="@+id/fabReview"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/fabReport"
        app:layout_constraintTop_toTopOf="@+id/fabReport"
        app:layout_constraintBottom_toBottomOf="@+id/fabReport"
        style="@style/ButtonLabel"
        android:text="@string/report"/>

</androidx.constraintlayout.widget.ConstraintLayout>