<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_playlists">

    <fragment
        android:id="@+id/nav_playlists"
        android:name="com.arpadfodor.android.songquiz.view.PlaylistsFragment"
        android:label="@string/menu_playlists"
        tools:layout="@layout/fragment_playlists" >
    </fragment>

    <fragment
        android:id="@+id/nav_playlist_add"
        android:name="com.arpadfodor.android.songquiz.view.PlaylistAddFragment"
        android:label="@string/menu_playlist_add"
        tools:layout="@layout/fragment_playlist_add" >
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.arpadfodor.android.songquiz.view.SettingsFragment"
        android:label="@string/menu_settings">
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.arpadfodor.android.songquiz.view.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" >
    </fragment>

    <action
        android:id="@+id/to_nav_playlists"
        app:destination="@id/nav_playlists" />

    <action
        android:id="@+id/to_nav_playlist_add"
        app:destination="@id/nav_playlist_add" />

    <action
        android:id="@+id/to_nav_settings"
        app:destination="@id/nav_settings" />

    <action
        android:id="@+id/to_nav_about"
        app:destination="@id/nav_about" />

</navigation>